<resources>
    <string name="app_name">lab3</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="email_address_required">Email address (required)</string>
    <string name="password_required">Password (required)</string>
    <string name="forget_password">Forget password?</string>
    <string name="sign_in">Sign in</string>
    <string name="maharishi_international_university_logo">Maharishi International University Logo</string>
    <string name="password">Password*</string>
    <string name="create_your_account">Create your account</string>
    <string name="required_field">* required field</string>
    <string name="first_name">First name*</string>
    <string name="last_name">Last name*</string>
    <string name="email_address">Email address*</string>
    <string name="shop_by_categories">Shop by Categories</string>
    <string name="books">Books</string>
    <string name="clothing">Clothing</string>
    <string name="organic_food">Organic Food</string>
    <string name="medicines">Medicines</string>
    <string name="welcome">Welcome</string>
    <string name="create_account">Create Account</string>
</resources>