<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/text_edit_bg"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/maharishi_international_university_logo"
        android:src="@drawable/miulogo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_in_to_your_account"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textStyle="bold"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="start"
        android:text="@string/email_address_required" />


    <EditText
        android:id="@+id/textEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/text_edit_bg"
        android:hint="Email Address"
        android:inputType="textEmailAddress"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="10dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:gravity="start"
        android:text="@string/password_required" />

    <EditText
        android:id="@+id/textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:autofillHints="password"
        android:background="@drawable/text_edit_bg"
        android:hint="Password"
        android:inputType="textPassword"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:padding="10dp" />

    <TextView
        android:id="@+id/forgetPasswordBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="all"
        android:clickable="true"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:text="@string/forget_password"
        android:textAlignment="viewEnd" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textStyle="bold" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:background="@color/gray" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3.5"
            android:gravity="center"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_gravity="center"
            android:layout_weight="1.5"
            android:background="@color/gray" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/createAccountBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/text_edit_bg"
        android:text="@string/create_a_new_account"
        android:textAllCaps="false"
        android:textColor="@color/purple_500"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>


</LinearLayout>